# Text-based-cpp

./: CMakeLists.txt  ESE224_Midterm_Project.vcxproj  ESE224_Midterm_Project.vcxproj.filters  FileOperations.cpp  FileOperations.h  enemy.cpp  enemy.h  functions.h  main.cpp  new.txt  player.cpp  player.h  scoreboard.cpp  scoreboard.h  scoreboard.txt  test.txt  user  weapon.cpp  weapon.h
Debug/: ESE224_Midterm_Project.exe.recipe  ESE224_Midterm_Project.ilk  vc142.idb
Debug/ESE224_M.4e7cf516.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ESE224_Midterm_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
